--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,8 @@
         </nav>
     <!--navbar-end-->
     <img class="img-fluid"src="Untitled design.png" height="">
-    <button id="Form" type="button" class="btn btn-secondary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfwk6llArYWMWk5yhNHAUNP-p_G8ITcMyI7U_B4H69DeGaISg/viewform?usp=sf_link">Click Here to fill the form</a></button>
+    <div class="Btn-1">
+      <button id="Form" type="button" class="btn btn-lg btn-secondary"><a class="link-light" href="https://docs.google.com/forms/d/e/1FAIpQLSfwk6llArYWMWk5yhNHAUNP-p_G8ITcMyI7U_B4H69DeGaISg/viewform?usp=sf_link">Click Here to fill the form</a></button>  
+    </div>
   </body>
 </html>
